UI tweaks: game name sticks out more in discussions

--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
 
     <template id="discussion-template">
       <li class="discussion">
-        ({time} ago) <a href="{url}" target="_blank">{title}</a> ({game} - {numReplies} replies)
+        ({time} ago) <a href="{url}" target="_blank">{title}</a> (<strong>{game}</strong> - {numReplies} replies)
       </li>
     </template>
 
