Clarify discussion time, condense template

--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
 
     <template id="discussion-template">
       <li class="discussion">
-        ({time} ago) <a href="{url}">{title}</a> (<strong>{game}</strong> - {numReplies} replies)
+        <strong>{game}</strong>: <a href="{url}">{title}</a> ({numReplies} posts) - updated {time} ago
       </li>
     </template>
 
