Fix: discussion date/time is local instead of UTC Update UI so it's easier to see update time in Discussions

--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
 
     <template id="discussion-template">
       <li class="discussion">
-        <strong>{game}</strong>: <a href="{url}">{title}</a> ({numReplies} posts) - updated {time} ago
+        <span class="underline">{game}</span>: <a href="{url}">{title}</a> ({numReplies} posts) - updated <strong>{time}</strong> ago
       </li>
     </template>
 
