--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,7 @@
     </template>
 
     <template id="header-template">
-        <p><strong>{gameName}</strong>: {paidReviews} paid reviews</p>
+        <p><strong>{gameName}</strong>: {paidReviews} <dfn title="Steam only includes direct purchases on Steam itself, that are not free keys">counted</dfn> reviews</p>
     </template>
 
     <template id="discussion-container-template">
@@ -48,7 +48,7 @@
     <template id="review-template">
       <div class="review">
         <p>
-          <span class="review-score review-score-{posOrNeg}">{posOrNeg}</span> review for <a href="{url}">{game}</a> as of <strong>{time}</strong> ago:</span>
+          <span class="review-score review-score-{posOrNeg}">{posOrNeg}</span> review (paid={paidReview}) for <a href="{url}">{game}</a> as of <strong>{time}</strong> ago:</span>
         </p>
         <p>{reviewContent}</p>
       </div>
