--- a/web/index.html
+++ b/web/index.html
@@ -48,7 +48,7 @@
     <template id="review-template">
       <div class="review">
         <p>
-          <span class="review-score review-score-{posOrNeg}">{posOrNeg}</span> review (paid={paidReview}) for <a href="{url}">{game}</a> as of <strong>{time}</strong> ago:</span>
+          <span class="review-score review-score-{posOrNeg}">{posOrNeg}</span> review for <a href="{url}">{game}</a> as of <strong>{time}</strong> ago:</span>
         </p>
         <p>{reviewContent}</p>
       </div>
