Refactor: renamed to "counted reviews"

--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,7 @@
     </template>
 
     <template id="header-template">
-        <p><strong>{gameName}</strong>: {paidReviews} <dfn title="Steam only includes direct purchases on Steam itself, that are not free keys">counted</dfn> reviews</p>
+        <p><strong>{gameName}</strong>: {countedReviews} <dfn title="Steam usually only includes direct purchases on Steam itself, that are not free keys">counted</dfn> reviews</p>
     </template>
 
     <template id="discussion-container-template">
