Remove all references to counted reviews Show summary as list items

--- a/web/index.html
+++ b/web/index.html
@@ -15,12 +15,13 @@
       <div class="full-width-container">
         <h1>Games Summary</h1>
         <div id="header-container">
+          <ul></ul>
         </div>
       </div>
     </template>
 
     <template id="header-template">
-        <p><strong>{gameName}</strong>: {countedReviews} <dfn title="Steam usually only includes direct purchases on Steam itself, that are not free keys">counted</dfn> reviews</p>
+        <li><strong>{gameName}</strong>: {reviews} reviews</li>
     </template>
 
     <template id="discussion-container-template">
