Add subforum to UI Add default mapping of all things from JSON, into JS, so the fields already exist by default

--- a/web/index.html
+++ b/web/index.html
@@ -34,7 +34,7 @@
 
     <template id="discussion-template">
       <li class="discussion">
-        <span class="underline">{game}</span>: <a href="{url}">{title}</a> ({numReplies} posts) - updated <strong>{time}</strong> ago
+        <span class="underline">{game}</span>: [{subforum}] <a href="{url}">{title}</a> ({numReplies} posts) - updated <strong>{time}</strong> ago
       </li>
     </template>
 
