Feature request: links to individual reviews. This is derived from how Steam works, may break in the future.

--- a/web/index.html
+++ b/web/index.html
@@ -49,7 +49,7 @@
     <template id="review-template">
       <div class="review">
         <p>
-          <span class="review-score review-score-{posOrNeg}">{posOrNeg}</span> review for <a href="{url}">{game}</a> as of <strong>{time}</strong> ago:</span>
+          <a href="{url}">🔗</a> <span class="review-score review-score-{posOrNeg}">{posOrNeg}</span> review for <a href="{url}">{game}</a> as of <strong>{time}</strong> ago:</span>
         </p>
         <p>{reviewContent}</p>
       </div>
