Feature request: remove underline on game name in discussions list Move it to the end, it's not very important.

--- a/web/index.html
+++ b/web/index.html
@@ -34,7 +34,7 @@
 
     <template id="discussion-template">
       <li class="discussion">
-        <span class="underline">{game}</span>: <a href="{url}">{subforum} | {title}</a> ({numReplies} posts) - updated <strong>{time}</strong> ago
+        <a href="{url}">{subforum} | {title}</a> ({numReplies} posts) - updated <strong>{time}</strong> ago - {game}
       </li>
     </template>
 
