Add to summary: number of discussions per game

--- a/web/index.html
+++ b/web/index.html
@@ -21,7 +21,7 @@
     </template>
 
     <template id="header-template">
-        <li><strong>{gameName}</strong>: {reviews} reviews</li>
+        <li><strong>{gameName}</strong>: {reviews} reviews, {discussions} discussions</li>
     </template>
 
     <template id="discussion-container-template">
