--- a/web/index.html
+++ b/web/index.html
@@ -34,7 +34,7 @@
 
     <template id="discussion-template">
       <li class="discussion">
-        <a href="{url}">{subforum} | {title}</a> ({numReplies} posts) - updated <strong>{time}</strong> ago - {game}
+        <p>[{subforum}] <a href="{url}">{title}</a> ({numReplies} posts) - updated <strong>{time}</strong> ago - {game}</p>
       </li>
     </template>
 
@@ -49,7 +49,7 @@
     <template id="review-template">
       <div class="review">
         <p>
-          <a href="{url}">🔗</a> <span class="review-score review-score-{posOrNeg}">{posOrNeg}</span> review for <a href="{url}">{game}</a> as of <strong>{time}</strong> ago:</span>
+          <a href="{url}"><span class="review-score review-score-{posOrNeg}">{posOrNeg}</span> review</a> for {game} as of <strong>{time}</strong> ago:</span>
         </p>
         <p>{reviewContent}</p>
       </div>
