Cleaner subforum list for discussions

--- a/web/index.html
+++ b/web/index.html
@@ -34,7 +34,7 @@
 
     <template id="discussion-template">
       <li class="discussion">
-        <p>[{subforum}] <a href="{url}">{title}</a> ({numReplies} posts) - updated <strong>{time}</strong> ago - {game}</p>
+        <p><a href="{url}">{title}</a> ({numReplies} posts) - updated <strong>{time}</strong> ago - {game},  {subforum} forum</p>
       </li>
     </template>
 
