Show discussions and number of posts/replies total Includes a fix for "(0 posts)" in discussions

--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,7 @@
 
     <template id="discussion-container-template">
       <div class="data-container"  id="discussions-container">
-        <h1>{numDiscussions} discussions</h1>
+        <h1>{numDiscussions} threads with {totalPosts} posts</h1>
         <ul id="discussion-container">
         </ul>
       </div>
