Fix issue where header list items were being inserted outside of the UL element

--- a/web/index.html
+++ b/web/index.html
@@ -14,9 +14,8 @@
     <template id="header-container-template">
       <div class="full-width-container">
         <h1>Games Summary</h1>
-        <div id="header-container">
-          <ul></ul>
-        </div>
+        <ul id="header-container">
+        </ul>
       </div>
     </template>
 
