--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,7 @@
     </template>
 
     <template id="header-template">
-        <li><strong>{gameName}</strong>: {reviews} reviews, {discussions} discussions</li>
+        <li class="header-item"><strong>{gameName}</strong>: {reviews} reviews, {discussions} discussions</li>
     </template>
 
     <template id="discussion-container-template">
