Add ⭐ to unread items, with button to mark all as read

--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,9 @@
         <h1>Games Summary</h1>
         <ul id="header-container">
         </ul>
+        <p>
+          <button id="clear-all-button" onclick="markAllAsRead(event);">Mark all ⭐ as read</button>
+        </p>
       </div>
     </template>
 
@@ -33,7 +36,11 @@
 
     <template id="discussion-template">
       <li class="discussion">
-        <p><a href="{url}">{title}</a> ({numReplies} posts) - updated <strong>{time}</strong> ago - {game},  {subforum} forum</p>
+        <p>
+          <span class="unread-star" data-key="{url}">⭐</span>
+          <a onclick="markDiscussionAsRead(event);" href="{url}">{title}</a>
+          ({numReplies} posts) - updated <strong>{time}</strong> ago - {game},  {subforum} forum
+        </p>
       </li>
     </template>
 
@@ -48,7 +55,9 @@
     <template id="review-template">
       <div class="review">
         <p>
-          <a href="{url}"><span class="review-score review-score-{posOrNeg}">{posOrNeg}</span> review</a> for {game} as of <strong>{time}</strong> ago:</span>
+          <span class="unread-star" data-key="{recommendationid}">⭐</span>
+          <a onclick="markReviewAsRead(event);" href="{url}"><span class="review-score review-score-{posOrNeg}">{posOrNeg}</span> review</a>
+          for {game} as of <strong>{time}</strong> ago:</span>
         </p>
         <p>{reviewContent}</p>
       </div>
