Main page shows *counted* reviews only.

--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,7 @@
     </template>
 
     <template id="header-template">
-        <li class="header-item"><strong>{gameName}</strong>: {reviews} reviews, {discussions} discussions</li>
+        <li class="header-item"><strong>{gameName}</strong>: {reviews} counted reviews, {discussions} discussions</li>
     </template>
 
     <template id="discussion-container-template">
